# headshake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: cameracontrol.cpp  cameracontrol.h  cameraposition.h  helpers.cpp  helpers.h  main.cpp  menu.cpp  menu.h  windows.cpp
src/cameracommands/: cameracommand.cpp  cameracommand.h  gforcecameracommand.cpp  gforcecameracommand.h  groundrollcameracommand.cpp  groundrollcameracommand.h  guncameracommand.cpp  guncameracommand.h  levelheadcameracommand.cpp  levelheadcameracommand.h  lookaheadcameracommand.cpp  lookaheadcameracommand.h  pistonenginecameracommand.cpp  pistonenginecameracommand.h  rotorcameracommand.cpp  rotorcameracommand.h  taxilookaheadcameracommand.cpp  taxilookaheadcameracommand.h  touchdowncameracommand.cpp  touchdowncameracommand.h
src/interfaces/: ivisitable.h  ivisitor.h
src/settings/: settingsreader.cpp  settingsreader.h  settingswriter.cpp  settingswriter.h
